Added the Token services for Authentication & Authorization

--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,6 +1,4 @@
-@using System.Web.Http
-@using EventTrackerAPI.Areas.HelpPage.Models
-@model HelpPageApiModel
+@model EventTrackerAPI.Areas.HelpPage.Models.HelpPageApiModel
 
 @{
     var description = Model.ApiDescription;
