--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
-@model ComplexTypeModelDescription
+@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
