--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,5 +1,4 @@
-@using EventTrackerAPI.Areas.HelpPage
-@model InvalidSample
+@model EventTrackerAPI.Areas.HelpPage.InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
 {
