--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,3 +1,2 @@
-@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
-@model SimpleTypeModelDescription
+@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.SimpleTypeModelDescription
 @Model.Documentation
