--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,5 +1,4 @@
-@using EventTrackerAPI.Areas.HelpPage
-@model TextSample
+@model EventTrackerAPI.Areas.HelpPage.TextSample
 
 <pre class="wrapped">
 @Model.Text
