--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/CollectionModelDescription.cshtml
@@ -1,5 +1,5 @@
 @using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
-@model CollectionModelDescription
+@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.CollectionModelDescription
 @if (Model.ElementDescription is ComplexTypeModelDescription)
 {
     @Html.DisplayFor(m => m.ElementDescription)
