--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,5 +1,4 @@
-@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
-@model EnumTypeModelDescription
+@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
 
@@ -8,7 +7,7 @@
         <tr><th>Name</th><th>Value</th><th>Description</th></tr>
     </thead>
     <tbody>
-        @foreach (EnumValueDescription value in Model.Values)
+        @foreach (var value in Model.Values)
         {
             <tr>
                 <td class="enum-name"><b>@value.Name</b></td>
