--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,4 +1,3 @@
-@using EventTrackerAPI.Areas.HelpPage
-@model ImageSample
+@model EventTrackerAPI.Areas.HelpPage.ImageSample
 
 <img src="@Model.Src" />
