--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -1,9 +1,4 @@
-@using System.Collections.Generic
-@using System.Collections.ObjectModel
-@using System.Web.Http.Description
-@using System.Threading
-@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
-@model IList<ParameterDescription>
+@model IList<EventTrackerAPI.Areas.HelpPage.ModelDescriptions.ParameterDescription>
 
 @if (Model.Count > 0)
 {
@@ -12,9 +7,9 @@
             <tr><th>Name</th><th>Description</th><th>Type</th><th>Additional information</th></tr>
         </thead>
         <tbody>
-            @foreach (ParameterDescription parameter in Model)
+            @foreach (var parameter in Model)
             {
-                ModelDescription modelDescription = parameter.TypeDescription;
+                var modelDescription = parameter.TypeDescription;
                 <tr>
                     <td class="parameter-name">@parameter.Name</td>
                     <td class="parameter-documentation">
