--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/Samples.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/Samples.cshtml
@@ -1,9 +1,8 @@
-@using System.Net.Http.Headers
-@model Dictionary<MediaTypeHeaderValue, object>
+@model Dictionary<System.Net.Http.Headers.MediaTypeHeaderValue, object>
 
 @{
     // Group the samples into a single tab if they are the same.
-    Dictionary<string, object> samples = Model.GroupBy(pair => pair.Value).ToDictionary(
+    var samples = Model.GroupBy(pair => pair.Value).ToDictionary(
         pair => String.Join(", ", pair.Select(m => m.Key.ToString()).ToArray()), 
         pair => pair.Key);
     var mediaTypes = samples.Keys;
