--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,6 +1,4 @@
-@using System.Web.Http
-@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
-@model ModelDescription
+@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
 <div id="body" class="help-page">
