--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/Api.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/Api.cshtml
@@ -1,4 +1,6 @@
-@model EventTrackerAPI.Areas.HelpPage.Models.HelpPageApiModel
+@using System.Web.Http
+@using EventTrackerAPI.Areas.HelpPage.Models
+@model HelpPageApiModel
 
 @{
     var description = Model.ApiDescription;
