--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/SimpleTypeModelDescription.cshtml
@@ -1,2 +1,3 @@
-@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.SimpleTypeModelDescription
+@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
+@model SimpleTypeModelDescription
 @Model.Documentation
