--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ComplexTypeModelDescription.cshtml
@@ -1,2 +1,3 @@
-@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.ComplexTypeModelDescription
+@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
+@model ComplexTypeModelDescription
 @Html.DisplayFor(m => m.Properties, "Parameters")
