--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/EnumTypeModelDescription.cshtml
@@ -1,4 +1,5 @@
-@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.EnumTypeModelDescription
+@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
+@model EnumTypeModelDescription
 
 <p>Possible enumeration values:</p>
 
@@ -7,7 +8,7 @@
         <tr><th>Name</th><th>Value</th><th>Description</th></tr>
     </thead>
     <tbody>
-        @foreach (var value in Model.Values)
+        @foreach (EnumValueDescription value in Model.Values)
         {
             <tr>
                 <td class="enum-name"><b>@value.Name</b></td>
