--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/HelpPageApiModel.cshtml
@@ -1,7 +1,11 @@
-@model EventTrackerAPI.Areas.HelpPage.Models.HelpPageApiModel
+@using System.Web.Http
+@using System.Web.Http.Description
+@using EventTrackerAPI.Areas.HelpPage.Models
+@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
+@model HelpPageApiModel
 
 @{
-    var description = Model.ApiDescription;
+    ApiDescription description = Model.ApiDescription;
 }
 <h1>@description.HttpMethod.Method @description.RelativePath</h1>
 <div>
