--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/ImageSample.cshtml
@@ -1,3 +1,4 @@
-@model EventTrackerAPI.Areas.HelpPage.ImageSample
+@using EventTrackerAPI.Areas.HelpPage
+@model ImageSample
 
 <img src="@Model.Src" />
