--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/InvalidSample.cshtml
@@ -1,4 +1,5 @@
-@model EventTrackerAPI.Areas.HelpPage.InvalidSample
+@using EventTrackerAPI.Areas.HelpPage
+@model InvalidSample
 
 @if (HttpContext.Current.IsDebuggingEnabled)
 {
