--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/KeyValuePairModelDescription.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/KeyValuePairModelDescription.cshtml
@@ -1,3 +1,4 @@
-@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.KeyValuePairModelDescription
+@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
+@model KeyValuePairModelDescription
 Pair of @Html.DisplayFor(m => Model.KeyModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.KeyModelDescription }) [key]
 and @Html.DisplayFor(m => Model.ValueModelDescription.ModelType, "ModelDescriptionLink", new { modelDescription = Model.ValueModelDescription }) [value]
