--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/Parameters.cshtml
@@ -1,4 +1,9 @@
-@model IList<EventTrackerAPI.Areas.HelpPage.ModelDescriptions.ParameterDescription>
+@using System.Collections.Generic
+@using System.Collections.ObjectModel
+@using System.Web.Http.Description
+@using System.Threading
+@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
+@model IList<ParameterDescription>
 
 @if (Model.Count > 0)
 {
@@ -7,9 +12,9 @@
             <tr><th>Name</th><th>Description</th><th>Type</th><th>Additional information</th></tr>
         </thead>
         <tbody>
-            @foreach (var parameter in Model)
+            @foreach (ParameterDescription parameter in Model)
             {
-                var modelDescription = parameter.TypeDescription;
+                ModelDescription modelDescription = parameter.TypeDescription;
                 <tr>
                     <td class="parameter-name">@parameter.Name</td>
                     <td class="parameter-documentation">
