--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/DisplayTemplates/TextSample.cshtml
@@ -1,4 +1,5 @@
-@model EventTrackerAPI.Areas.HelpPage.TextSample
+@using EventTrackerAPI.Areas.HelpPage
+@model TextSample
 
 <pre class="wrapped">
 @Model.Text
