--- a/src/EventTrackerAPI/Areas/HelpPage/Views/Help/ResourceModel.cshtml
+++ b/src/EventTrackerAPI/Areas/HelpPage/Views/Help/ResourceModel.cshtml
@@ -1,4 +1,6 @@
-@model EventTrackerAPI.Areas.HelpPage.ModelDescriptions.ModelDescription
+@using System.Web.Http
+@using EventTrackerAPI.Areas.HelpPage.ModelDescriptions
+@model ModelDescription
 
 <link type="text/css" href="~/Areas/HelpPage/HelpPage.css" rel="stylesheet" />
 <div id="body" class="help-page">
