--- a/src/EventTrackerAdminWeb/Views/Events/Index.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Events/Index.cshtml
@@ -1,35 +1,44 @@
 ﻿@model System.Collections.Generic.IEnumerable<EventTracker.BusinessModel.Event>
 
 @{
-    ViewBag.Title = "title";
+    ViewBag.Title = "All Events";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
-    <div class="row">
-        @if (Model.Any())
-        {
-            <hr/>
-            <table class="table table-hover table-striped" id="eventsTable">
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Date</th>
-                    <th>Name</th>
-                </tr>
-                </thead>
-                <tbody>
-                    @foreach (var anEvent in Model) {
-                        <tr>
-                            <td>@anEvent.EventId</td>
-                            <td>@anEvent.EventDate</td>
-                            <td>@anEvent.EventName</td>
-                    </tr>
-                    }
-                </tbody>
-            </table>
-        }
 
+<div class="panel panel-default">
+
+    <div class="panel-heading">
+        <h>Events</h>
     </div>
+    <div class="panel-body">
+        <table class="table table-striped table-condensed table-bordered">
+            <tr>
+                <th class="text-right">ID</th>
+                <th>Name</th>
+                <th class="text-right">Date</th>
+                <th class="text-center"></th>
+            </tr>
+            @foreach (var item in Model) {
+                <tr>
+                    <td class="text-right">@item.EventId</td>
+                    <td>@Html.ActionLink(item.EventName, "Edit", new { item.EventId})</td>
+                    <td class="text-right">@item.EventDate.ToString("MMM dd, yyyy")</td>
+                    <td class="text-center">
+                        @using (Html.BeginForm("Delete", "Events")) {
+                            @Html.Hidden("EventId", item.EventId)
+                            <input type="submit"
+                                   class="btn btn-default btn-xs"
+                                   value="Delete" />
+                        }
+                    </td>
+                </tr>
+            }
+            </table>
+        </div>
+        <div class="panel-footer">
+            @Html.ActionLink("Add a new event", "Create", null,
+                new { @class = "btn btn-default" })
+        </div>
+    </div>	
 
-</div>
