--- a/src/EventTrackerAdminWeb/Views/Membership/Index.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/Index.cshtml
@@ -1,5 +1,11 @@
 ﻿@using Microsoft.Ajax.Utilities
+@*
 @model System.Collections.Generic.IEnumerable<EventTracker.BusinessModel.Membership.Member>
+*@
+@model PagedList.IPagedList<EventTracker.BusinessModel.Membership.Member>
+
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css"/>
 
 @{
     ViewBag.Title = "title";
@@ -12,35 +18,52 @@
         <h>Events</h>
     </div>
     <div class="panel-body">
+        @using (Html.BeginForm("Index", "Membership", FormMethod.Get)) {
+            <p>
+                Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
+                <input type="submit" value="Search" />
+            </p>
+        }
         <table class="table table-striped table-condensed table-bordered">
             <tr>
-                <th class="text-right">Lastname</th>
+                <th class="text-right">
+                    @Html.ActionLink("Last Name", "Index", new {sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter})
+                </th>
                 <th class="text-right">Firstname</th>
                 <th class="text-right">Email</th>
                 <th class="text-right">Phone</th>
                 <th class="text-right">MemberOf</th>
+                <th class="text-right">HH</th>
                 <th class="text-right">DOB</th>
                 <th class="text-right"></th>
             </tr>
-            @foreach (var item in Model) {
+            @foreach (var item in Model)
+            {
                 <tr>
-                    <td>@Html.ActionLink(item.LastName, "Edit", new { item.MemberId })</td>
+                    <td>@Html.ActionLink(item.LastName, "Edit", new {item.MemberId})</td>
                     <td class="text-right">@item.FirstName</td>
                     <td class="text-right">@item.Email</td>
                     <td class="text-right">@item.Phone</td>
                     <td class="text-right">@item.MemberOf</td>
+                    <td class="text-right">@item.Household</td>
                     <td class="text-right">@string.Format("{0:MM/dd/yyyy}", item.DateOfBirth)</td>
                     <td class="text-center">
-                        @using (Html.BeginForm("Delete", "Membership")) {
+                        @using (Html.BeginForm("Delete", "Membership"))
+                        {
                             @Html.Hidden("MemberId", item.MemberId)
                             <input type="submit"
                                    class="btn btn-default btn-xs"
-                                   value="Delete" />
+                                   value="Delete"/>
                         }
                     </td>
                 </tr>
             }
         </table>
+        <br />
+        Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+        @Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
     </div>
     <div class="panel-footer">
         @Html.ActionLink("Add Member", "Create", null,
