--- a/src/EventTrackerAdminWeb/app/Views/Members/index.html
+++ b/src/EventTrackerAdminWeb/app/Views/Members/index.html
@@ -1,12 +1,19 @@
-﻿<h1>Customer List</h1>
+﻿
+<div>
+    <h3>test</h3>
+    <div class="well" style="background-image: none">
 
-<table class="table table-hover table-bordered">
-    <tr>
-        <th>Lastn Name</th>
-        <th>First Name</th>
-    </tr>
-    <tr ng-repeat="item in data.members">
-        <td>{{item.Lastname}}</td>
-        <td>{{item.Firstname}}</td>
-    </tr>
-</table>
+        <div class="input-group">
+            <input type="text"
+                   name="searchText"
+                   ng-model="data.filterOptions.filterText"
+                   class="form-control"
+                   placeholder="Search by ID, Contact Name, Contact Title, City and Country"/>
+            <span class="input-group-addon glyphicon glyphicon-search"
+                  style="cursor: pointer"></span>
+        </div>
+        <br/>test
+        <div class="gridStyle" ng-grid="gridOptions"></div>
+
+    </div>
+</div>
