--- a/src/EventTrackerAdminWeb/Views/Events/Edit.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Events/Edit.cshtml
@@ -1,5 +1,4 @@
-﻿@using AutoMapper.Internal
-@model EventTracker.BusinessModel.Event
+﻿@model EventTracker.BusinessModel.Event
 
 @{
     ViewBag.Title = "Edit :" + @Model.EventName;
