--- a/src/EventTrackerAdminWeb/Views/Shared/_MenuBar.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Shared/_MenuBar.cshtml
@@ -1,5 +1,4 @@
-﻿@using EventTracker.BusinessModel.Menus
-@model IEnumerable<EventTracker.BusinessModel.Menus.MenuItem>
+﻿@model IEnumerable<EventTracker.BusinessModel.Menus.MenuItem>
 
 <ul class="nav navbar-nav">
     <li><a href="#">Home</a></li>
