--- a/src/EventTrackerAdminWeb/Views/Events/Index - Copy.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Events/Index - Copy.cshtml
@@ -1,4 +1,4 @@
-﻿@model System.Collections.Generic.IEnumerable<EventTracker.BusinessModel.Event>
+﻿@model IEnumerable<EventTracker.BusinessModel.Event>
 
 @{
     ViewBag.Title = "title";
