--- a/src/EventTrackerAdminWeb/Views/Events/Index.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Events/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model System.Collections.Generic.IEnumerable<EventTracker.BusinessModel.Event>
+﻿@model IEnumerable<EventTracker.BusinessModel.Event>
 
 @{
     ViewBag.Title = "All Events";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<h4>Welcome : @User.</h4>
 
 <div class="panel panel-default">
 
