--- a/src/EventTrackerAdminWeb/Views/Membership/DeleteHouseHold.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/DeleteHouseHold.cshtml
@@ -2,8 +2,7 @@
 
 @{
     ViewBag.Title = "title";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "_Layout";
 }
 
-
-<div>Edit Member Household</div>
+<h2>title</h2>
