--- a/src/EventTrackerAdminWeb/Views/Membership/EditHouseHold.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/EditHouseHold.cshtml
@@ -1,11 +1,66 @@
-﻿@model EventTracker.BusinessModel.Membership.HouseHold
+﻿@model EventTracker.BusinessModel.Membership.HouseHoldDetailsViewModel
+
 @{
     ViewBag.Title = "title";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="panel">
-    <div class="panel-heading">
-            my household
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>Household</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.HouseHold.HouseHoldId)
+        @Html.HiddenFor(model => model.HouseHold.HouseHoldLeaderMemberId)
+        
+        <div class="form-group">
+            @Html.LabelFor(model => model.HouseHold.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.HouseHold.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.HouseHold.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.HouseHold.Area, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.HouseHold.Area, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.HouseHold.Area, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <button class="btn btn-default">Save</button>
+            </div>
+        </div>
+    </div>
+}
+
+
+<!-- modal placeholder-->
+<div id='myModal' class='modal fade in'>
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div id='myModalContent'></div>
+        </div>
     </div>
 </div>
+@**@
+    <div class="row">
+        <div class="col-md-offset-2 col-md-10" id="replacetarget">
+            @{ Html.RenderAction("HouseholdMembers", "Membership", new { householdId = Model.HouseHold.HouseHoldId, houseHoldLeaderMemberId = Model.HouseHold.HouseHoldLeaderMemberId }); }
+        </div>
+    </div>
+
+<p>
+    @Html.ActionLink("Back to List", "Households")
+
+</p>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+
+}
