--- a/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
@@ -16,7 +16,7 @@
         <h>Events</h>
     </div>
     <div class="panel-body">
-        @using (Html.BeginForm("Index", "Membership", FormMethod.Get)) {
+        @using (Html.BeginForm("Members", "Membership", FormMethod.Get)) {
             <p>
                 Find by name: @Html.TextBox("SearchString", ViewBag.CurrentFilter as string)
                 <input type="submit" value="Search" />
@@ -25,7 +25,7 @@
         <table class="table table-striped table-condensed table-bordered">
             <tr>
                 <th class="text-right">
-                    @Html.ActionLink("Last Name", "Index", new {sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter})
+                    @Html.ActionLink("Last Name", "Members", new {sortOrder = ViewBag.NameSortParm, currentFilter = ViewBag.CurrentFilter})
                 </th>
                 <th class="text-right">Firstname</th>
                 <th class="text-right">Email</th>
@@ -60,7 +60,7 @@
         <br />
         Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
-        @Html.PagedListPager(Model, page => Url.Action("Index",
+        @Html.PagedListPager(Model, page => Url.Action("Members",
     new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
     </div>
     <div class="panel-footer">
