--- a/src/EventTrackerAdminWeb/Views/Membership/EditMember.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/EditMember.cshtml
@@ -8,14 +8,14 @@
     <div class="panel-heading">
         <h3>@Model.FullName</h3>
         @if (Model.SpouseMemberId > 0) {
-            @Html.ActionLink("Spouse: " + @Model.SpouseName, "Edit", new { memberId = @Model.SpouseMemberId }, new { @class = "btn btn-primary" })
-         }
+            @Html.ActionLink("Spouse: " + @Model.SpouseName, "EditMember", new { memberId = @Model.SpouseMemberId }, new { @class = "btn btn-primary" })
+        }
         @if (Model.HouseHoldId.HasValue) {
-            @Html.ActionLink("Household: " + @Model.HouseholdName, "EditHousehold", new { householdid = @Model.HouseHoldId }, new { @class = "btn btn-primary" })
+            @Html.ActionLink("Household: " + @Model.HouseholdName, "EditHousehold", new { controller= "HouseHold", householdid = @Model.HouseHoldId }, new { @class = "btn btn-primary" })
         }
     </div>
 
-    @using (Html.BeginForm("Edit", "Membership")) {
+    @using (Html.BeginForm("EditMember", "Membership")) {
         <div class="panel-body">
             @Html.HiddenFor(m => m.MemberId)
 
@@ -38,26 +38,34 @@
                         break;
                     case "HouseHoldId":
                         break;
+                    case "HouseholdName":
+                        break;
                     default:
                         <div class="form-group">
                             @if (property.PropertyName == "DateOfBirth") {
                                 <label>@(property.DisplayName ?? property.PropertyName)</label>
                                 <div class="input-group date">
-                                    @Html.TextBoxFor(model => Model.DateOfBirth, new {@class = "form-control", id = "EventDate", @placeholder = "mm/dd/yyyy", @title = "Event Date"})
+                                    @Html.TextBoxFor(model => Model.DateOfBirth, "{0:MM/dd/yyyy}", new { @class = "form-control", id = "EventDate", @placeholder = "mm/dd/yyyy", @title = "Event Date" })
                                     <div class="input-group-addon">
                                         <span class="glyphicon glyphicon-th"></span>
                                     </div>
                                 </div>
                             }
-                            else if (property.PropertyName == "HouseholdName") {
-                                if (@Model.HouseHoldId.HasValue) {
-                                    @Html.ActionLink("Household: " + @Model.HouseholdName, "EditHousehold", new { householdid = @Model.HouseHoldId }, new { @class = "btn btn-primary" })
-                                }
+                            @*else if (property.PropertyName == "HouseholdName") {
+                                    if (@Model.HouseHoldId.HasValue) {
+                                        @Html.ActionLink("Household: " + @Model.HouseholdName, "EditHousehold", new { householdid = @Model.HouseHoldId }, new { @class = "btn btn-primary" })
+                                    }
+                                }*@
+                            else if (property.PropertyName == "Gender") {
+                                @Html.RadioButtonFor(m => m.Gender, "Male", Model.Gender == "M" ? new { Checked = "checked" } : null)
+                                <span>Male</span>
+                                @Html.RadioButtonFor(m => m.Gender, "Female", Model.Gender == "F" ? new { Checked = "checked" } : null)  <span>Female</span>
                             }
+
                             else {
                                 <label>@(property.DisplayName ?? property.PropertyName)</label>
                                 @Html.TextBox(property.PropertyName, null,
-                                    new {@class = "form-control"})
+                                    new { @class = "form-control" })
                             }
                             @Html.ValidationMessage(property.PropertyName)
                         </div>
@@ -71,7 +79,7 @@
 
         <div class="panel-footer">
             <input type="submit" value="Save" class="btn btn-primary" />
-            @Html.ActionLink("Cancel and return to List", "Index", null, new {
+            @Html.ActionLink("Cancel and return to List", "Members", null, new {
            @class = "btn btn-default"
        })
         </div>
