Updated DbModel to use MemberOf in Members table

--- a/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/Members.cshtml
@@ -37,7 +37,13 @@
                 <tr>
                     <td>@Html.ActionLink(item.LastName, "EditMember", new {item.MemberId})</td>
                     <td class="text-right">@item.FirstName</td>
-                    <td class="text-right">@item.MemberOf</td>
+                    @if (item.MemberOf == "KFC" || item.MemberOf == "YFC") {
+                        <td>@Html.ActionLink(item.MemberOf, "MembershipHistory", new { memberId = item.MemberId, memberOf = item.MemberOf })</td>
+                    }
+                    else {
+                        <td class="text-right">@item.MemberOf</td>
+                    }
+                    
                     <td class="text-right">@item.HouseholdName</td>
                     <td class="text-center">
                         @using (Html.BeginForm("Delete", "Membership"))
