--- a/src/EventTrackerAdminWeb/Views/Events/Edit.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Events/Edit.cshtml
@@ -7,7 +7,13 @@
 
 <div class="panel">
     <div class="panel-heading">
-        <h3>Edit @Model.EventName</h3>
+        @if (Model.EventId > 0)
+        {
+            <h3>@Model.EventName</h3>
+        }
+        else {
+            <h3>New Event</h3>
+        }
     </div>
 
     @using (Html.BeginForm("Edit", "Events")) {
