--- a/src/EventTrackerAdminWeb/Views/Membership/EditMember.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/EditMember.cshtml
@@ -80,8 +80,7 @@
         <div class="panel-footer">
             <input type="submit" value="Save" class="btn btn-primary" />
             @Html.ActionLink("Cancel and return to List", "Members", null, new {
-           @class = "btn btn-default"
-       })
+           @class = "btn btn-default" })
         </div>
     }
 </div>
