--- a/src/EventTrackerAdminWeb/Views/Membership/MembershipHistory.cshtml
+++ b/src/EventTrackerAdminWeb/Views/Membership/MembershipHistory.cshtml
@@ -1,40 +1,58 @@
-﻿@model EventTracker.BusinessModel.Membership.MembershipHistoryViewModel
+﻿@using System.Web.UI.WebControls
+@model EventTracker.BusinessModel.Membership.MembershipHistoryViewModel
 
 @{
     ViewBag.Title = "title";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div class="panel-body">
+<div class="panel">
+    <div class="panel-body">
 
-    <table class="table table-striped table-condensed table-bordered">
-        <tr>
-            <th class="text-right">
-                Member Of
-            </th>
-            <th class="text-right">Start Date</th>
-            <th class="text-right">End Date</th>
-        </tr>
-        @foreach (var item in Model.MembershipHistory) {
+        @Html.AntiForgeryToken()
+        <div class="panel-heading">
+            <h3>
+                @if (TempData["heading"] != null) {
+                    @TempData["heading"]
+                }
+            </h3>
+        </div>
+        <table class="table table-striped table-condensed table-bordered">
             <tr>
-                <td class="text-right">@item.MemberOf</td>
-                <td class="text-right">@item.StartDate</td>
-                <td class="text-right">
-                    @if (item.EndDate.HasValue) {
-                        @item.EndDate.Value.ToString("{MM/dd/yyyy}")}
-                </td>
+                <th class="text-right">
+                    Member Of
+                </th>
+                <th class="text-right">Start Date</th>
+                <th class="text-right">End Date</th>
             </tr>
-        }
-    </table>
-                        <br/>
-                        @using (@Html.BeginForm("UpdateMembership", "Membership", FormMethod.Post)) {
-                            <div>
-                                @Html.DropDownListFor(m => m.MemberOf, Model.MembershipOptions, new { @class = "form-control" })
-                            </div>
-                            <div class="modal-footer">
-                                <button class="btn" type="button" data-dismiss="modal">Cancel</button>
-                                <input class="btn btn-primary" type="submit" value="Add" />
-                            </div>
+            @foreach (var item in Model.MembershipHistory) {
+                <tr>
+                    <td class="text-right">@item.MemberOf</td>
+                    <td class="text-right">@item.StartDate.ToString("MM/dd/yyyy")</td>
+                    <td class="text-right">
+                        @if (item.EndDate.HasValue) {
+                            @item.EndDate.Value.ToString("MM/dd/yyyy")
                         }
+                    </td>
+                </tr>
+            }
+        </table>
+        <br />
+        @*
+            @using (Html.BeginForm("BringBackList", "BringBack",FormMethod.Get, new {bringBackSearchViewModel = Model.BringBackSearchingModel })) {
+        *@
+        @using (@Html.BeginForm("UpdateMembership", "Membership", FormMethod.Post)) {
+            @Html.Hidden("MemberOfOldValue", Model.MemberOf)
+            @Html.Hidden("MemberId", Model.MemberId)
+            <div>
+                @Html.DropDownList("memberOf", Model.MembershipOptions, new { @class = "form-control" })
+            </div>
+
+            <div class="modal-footer">
+                @Html.ActionLink("Cancel and return to List", "Members", null, new { @class = "btn btn-default" })
+                <input class="btn btn-primary" type="submit" value="Save" />
+            </div>
+
+        }
+    </div>
 
 </div>
-
